Fix broken CSS and reduce gap between account name and folders

--- a/styles/main.less
+++ b/styles/main.less
@@ -97,9 +97,11 @@
 }
 
 .account-folders-sidebar .account-section + .account-section {
-	border-top: 1px solid @border-color-divider;
-	margin-top: 2px;
-	padding-top: 2px;
+	margin-top: 4px;
+}
+
+.account-folders-sidebar .account-section .outline-view {
+	margin-top: -6px;
 }
 
 .account-folders-sidebar .account-section .outline-view > .title {
